# civic-lens

./: .gitignore  EC_PLAN_B_PROTOCOL.md  LICENSE  PROJECT_PRINCIPLES.md  README.md  pyproject.toml  requirements.txt  scope-lock.md
artifacts/: calibration_report.md  error_distributions.pkl  london_vi_cap.txt  model_lock.txt  scenario_outputs.csv  scenario_run_log.csv
data/processed/: DATA_DICTIONARY.md
data/raw/: data_inventory.csv
docs/: DATA_SOURCE_METADATA.md  DECISIONS_LOG.md  ELECTION_NIGHT_RUNSHEET.md  MAYORAL_CONTEXT_LAYER.md  METHODOLOGY.md  PHASE1_RAW_AUDIT.md  PROJECT_PLAN.md  RAW_DATA_AUDIT_SUMMARY.md  SCENARIO_DEFINITIONS.md
notebooks/: baseline_volatility.ipynb  scenario_exploration.ipynb
reports/: mayoral_context.md  part1_article.md  part2_article.md  part3_template.md
reports/tableau_data/: authority_centroids.csv  tableau_authority_metrics.csv  tableau_fi_timeseries.csv  tableau_kpis.csv  tableau_party_swings.csv  tableau_volatility_distribution.csv
src/audit/: audit_results.py
src/calibration/: run_backtest.py
src/civic_lens/: __init__.py  baseline.py  calibration.py  cleaner.py  commons_2021_loader.py  commons_2022_loader.py  concordance.py  dcleapil_loader.py  export_phase14_tableau.py  export_tableau.py  geography.py  lookup_loader.py  metrics.py  party_coding_loader.py  party_normalise.py  qa.py  run_ingestion.py  scenario_model.py  scope_verify.py  shock.py  ward_name_utils.py
src/metrics/: mayoral_descriptive.py  metrics.py
src/simulation/: scenario_model.py
tests/: test_loaders.py  test_metrics.py  test_party_normalise.py  test_phase10.py  test_phase11_tableau.py  test_phase12.py  test_phase14_tableau.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
